<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/openOtherBrowser"
        android:orderInCategory="100"
        android:title="@string/open_other_browser"
        app:showAsAction="never" />
    <item
        android:id="@+id/goFavorite"
        android:orderInCategory="200"
        android:title="@string/favorite_add"
        android:icon="@drawable/ic_star_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:orderInCategory="300"
        android:title="@string/search_dialog_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/finishApp"
        android:orderInCategory="400"
        android:title="@string/menu_item2"
        app:showAsAction="never" />
    <item
        android:id="@+id/refreshApp"
        android:orderInCategory="201"
        android:title="@string/menu_item3"
        android:icon="@drawable/ic_autorenew_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/shareApp"
        android:orderInCategory="600"
        android:title="@string/menu_item4"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always" />

</menu>
