<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/aboutApp"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/Settings"
        android:orderInCategory="200"
        android:title="@string/Settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_settings_24"/>
    <item
        android:id="@+id/openSourceLicense"
        android:orderInCategory="200"
        android:title="@string/opensource_license"
        app:showAsAction="never" />
    <item
        android:id="@+id/finishApp"
        android:orderInCategory="300"
        android:title="@string/finishApp"
        app:showAsAction="never" />


</menu>
