<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream_background"
    tools:context=".IntroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/adView"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/adView"
                tools:layout_editor_absoluteX="1dp">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/covid19"
                    android:textColor="@color/black_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />


                <ListView
                    android:id="@+id/listCovid"
                    android:layout_width="match_parent"
                    android:layout_height="300dp">

                </ListView>

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray" />

                <ImageButton
                    android:id="@+id/buttonNews"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:background="#0000"
                    android:scaleType="centerInside"
                    ads:srcCompat="@drawable/shiroi_news_logo" />

                <ImageButton
                    android:id="@+id/buttonHp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="#0000"
                    android:scaleType="centerInside"
                    ads:srcCompat="@drawable/shiroihplogo01" />

                <ImageButton
                    android:id="@+id/bus"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="#0000"
                    android:scaleType="centerInside"
                    ads:srcCompat="@drawable/nashibus" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

                <ImageButton
                    android:id="@+id/buttonTel"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="#0000"
                    android:scaleType="centerInside"
                    ads:srcCompat="@drawable/shiroi_tel_logo" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sns_name"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/buttonTwitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:scaleType="centerInside"
                        ads:srcCompat="@drawable/twitter_logo" />

                    <ImageButton
                        android:id="@+id/buttonFb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:scaleType="centerInside"
                        ads:srcCompat="@drawable/facebook_logo" />

                    <ImageButton
                        android:id="@+id/buttonInsta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:scaleType="centerInside"
                        ads:srcCompat="@drawable/instagram_logo" />

                    <ImageButton
                        android:id="@+id/buttonYoutube"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:scaleType="centerInside"
                        ads:srcCompat="@drawable/youtube_social_icon_white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/copyright"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/helpMessage1"
                    android:textColor="#000000" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>



    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>